# PySciGL

./: __init__.py  dot_product.py  dot_shader_fragment.txt  f_shader.txt  learning.py  learning_fragment_shader.txt  learning_shader_fragment.txt  learning_shader_vertex.txt  learning_vertex_shader.txt  m.py  m_fragment.txt  m_vertex.txt  main.py  pyproject.toml
src/pyscigl/: __main__.py  learning.py
src/pyscigl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pyscigl/shaders/: learning_shader_fragment.txt  learning_shader_vertex.txt
